# gnssir-ice

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: features.md
docs/adr/: 0001-immutable-per-stage-artifacts.md
examples/: README.md  camera_labels_to_validation.py  ross.example.yaml
src/gnssir_ice/: __init__.py  af_gain.py  aggregate.py  arc_table.py  arcs.py  cli.py  config.py  constants.py  extract.py  features.py  model.py  normalize.py  pipeline.py  plot.py  provenance.py  seasons.py  snr.py  wavelet.py
tests/: conftest.py  test_aggregation.py  test_arc_table.py  test_config.py  test_features.py  test_model.py  test_pipeline.py  test_plot.py  test_regression.py  test_seasons.py  test_snr.py  test_wavelet.py
tests/fixtures/: make_regression_fixture.py
